[package]
name = "invoketest"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-env-common = { version = "0.0.5", features = ["std"] }
soroban-env-host = { version = "0.0.5", features = ["vm", "serde", "hostfn_log_fmt_values"] }
hex = "0.4.3"
sha2 = "0.10.2"

[patch.crates-io]
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "91405076" }
wasmi = { package = "soroban-wasmi", git = "https://github.com/stellar/wasmi", rev = "a61b6df" }
